# openglplayground

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  readme.md
src/: CMakeLists.txt  main.cpp  vertex_data.hpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
